kubernetes/rendered/staging/infrastructure/envoy-gateway/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_envoy-gateway-topology-injector.envoy-gateway-system.yaml
# Source: envoy-gateway-wrapper/charts/gateway-helm/templates/envoy-proxy-topology-injector-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: envoy-gateway-topology-injector.envoy-gateway-system
  annotations:
    helm.sh/hook: pre-install, pre-upgrade
    helm.sh/hook-weight: "-1"
    kluctl.io/ignore-diff-field: webhooks[0].clientConfig.caBundle
  labels:
    app.kubernetes.io/component: topology-injector
    helm.sh/chart: gateway-helm-1.6.0
    app.kubernetes.io/name: gateway-helm
    app.kubernetes.io/instance: cloudnative-pg
    app.kubernetes.io/version: v1.6.0
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: topology.webhook.gateway.envoyproxy.io
    admissionReviewVersions:
      - v1
    sideEffects: None
    clientConfig:
      service:
        name: envoy-gateway
        namespace: envoy-gateway-system
        path: /inject-pod-topology
        port: 9443
    failurePolicy: Ignore
    rules:
      - operations:
          - CREATE
        apiGroups:
          - ""
        apiVersions:
          - v1
        resources:
          - pods/binding
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - envoy-gateway-system
